# MMM

./: CMakeLists.txt  MathFuncs.cpp  MathFuncs.h  Plotter.cpp  Plotter.h  Source.cpp  UICalc.cpp  UICalc.h  intf.h  main.cpp  mymath.cpp  mymath.h  ui.h
